fixed shadow issue on mobile view of thumbnail

--- a/src/components/work/workCard/workCard.module.css
+++ b/src/components/work/workCard/workCard.module.css
@@ -57,15 +57,15 @@
     justify-content: center;
     padding: 0;
   }
-  .thumbnail {
+  .thumbnail,
+  .wrapper:nth-child(even) .thumbnail {
     width: 100%;
     margin: 0;
     max-width: 100%;
     z-index: 1;
+    filter: drop-shadow(0px 20px 30px var(--shadow));
   }
-  .wrapper:nth-child(even) .thumbnail {
-    margin: 0;
-  }
+
   .content {
     width: 100%;
     max-width: 100%;
@@ -85,9 +85,11 @@
   .title {
     font-size: 1.8rem;
   }
-  .thumbnail {
-    width: 113%;
-    max-width: 113%;
+  .thumbnail,
+  .wrapper:nth-child(even) .thumbnail {
+    width: 90%;
+    max-width: 90%;
+    filter: drop-shadow(0px 15px 20px var(--shadow));
   }
   .content {
     margin-top: -3rem;
